[Cronet] Add check to addQuicHint

This should help fix Youtube's crash, and hopefully prevent similar
problems in the future.

Bug: 739979
Change-Id: Ifd0099439b1e33e85da4f73a522b2ba5c5bc063b