components/cronet/ios/Cronet.h
@@ -62,7 +62,7 @@ GRPC_SUPPORT_EXPORT
 
 // Adds hint that host supports QUIC on altPort. This method only has any effect
 // before |start| is called.
-+ (void)addQuicHint:(NSString*)host port:(int)port altPort:(int)altPort;
++ (BOOL)addQuicHint:(NSString*)host port:(int)port altPort:(int)altPort;
 
 // Set experimental Cronet options.  Argument is a JSON string; see
 // |URLRequestContextConfig| for more details.  This method only has
