components/cronet/ios/cronet_environment.mm
@@ -31,6 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ios/web/public/global_state/ios_global_state.h"
 #include "ios/web/public/user_agent.h"
 #include "net/base/network_change_notifier.h"
+#include "net/base/url_util.h"
 #include "net/cert/cert_verifier.h"
 #include "net/dns/host_resolver.h"
 #include "net/dns/mapped_host_resolver.h"
@@ -328,8 +329,17 @@ void CronetEnvironment::InitializeOnNetworkThread() {
       new net::HttpServerPropertiesImpl());
 
   for (const auto& quic_hint : quic_hints_) {
+    url::CanonHostInfo host_info;
+    std::string canon_host(net::CanonicalizeHost(quic_hint.host(), &host_info));
+    if (!host_info.IsIPAddress() &&
+        !net::IsCanonicalizedHostCompliant(canon_host)) {
+      LOG(ERROR) << "Invalid QUIC hint host: " << quic_hint.host();
+      continue;
+    }
+
     net::AlternativeService alternative_service(net::kProtoQUIC, "",
                                                 quic_hint.port());
+
     url::SchemeHostPort quic_hint_server("https", quic_hint.host(),
                                          quic_hint.port());
     http_server_properties->SetQuicAlternativeService(
